tests/fixtures/invalid/pow_int_set_float.py
# Cannot call pow() with Int, Set[int], Float
x = pow(1, {1, 2, 3}, 1.0)
